Add: New column 'is_published' for sketch from receps;
Add: Pytest-django for tests in Receps: 'tests_receps_urls.py', 'tests_repces_views.py', 'tests_receps_base.py';

Add: Pytest-django for tests in auth: 'tests_auth_urls.py', 'tests_auth_views.py', 'test_auth_status_code.py';

Update: views.py (Receps) modified for to integration of sketch;

Update: receps_list.html (Receps) now, if author is unknown (Deleted from database), he show in templtate 'unknow';

Update: Structure from urls enhanced, add Reverse (Url) Django, Defining absolute paths;

Update: Urls were changed due to the insertion of the new value 'app_name' in all urls;

Update: Now, instead of the urls being referenced by a specific database id, from now on they will use slug;

--- a/autentication/static/css/style.css
+++ b/autentication/static/css/style.css
@@ -3,6 +3,7 @@
 body {
     margin: 0;
     font-family: Arial, sans-serif;
+    background-color: var(--color-gray-1);
 }
 
 .main-container {
@@ -10,11 +11,11 @@ body {
     align-items: center;
     justify-content: center;
     height: 100vh;
-    background-color: #f5f5f5; /* Cor de fundo geral */
+    background-color: var(--color-gray-2) /* Cor de fundo geral */
 }
 
 .main-form {
-    background-color: #EBEBEB;
+    background-color: var(--color-gray-2);
     border-radius: 12px;
     width: 100%;
     padding: 40px; /* Reduzi o padding para ficar mais equilibrado */
