--- a/receps/templates/extensions/receps_list.html
+++ b/receps/templates/extensions/receps_list.html
@@ -25,7 +25,7 @@
                     {{recipe.date}}
                 </span>
                 
-                <a class="author-item" href="{% url 'category' id=recipe.category.id %}">
+                <a class="author-item" href="{% url 'receps:category' name=recipe.category.name %}">
                     <i class="fas fa-layer-group"></i>
                     {{recipe.category.name}}
                 </a>
@@ -74,7 +74,7 @@
             </div>
             
             <footer class="recipe-footer">
-                <a class="recipe-read-more button button-dark button-full-width" href="{% url 'receps-recipe' id=recipe.id %}">
+                <a class="recipe-read-more button button-dark button-full-width" href="{% url 'receps:receps-recipe' slug=recipe.slug %}">
                     <i class="fas fa-eye"></i>
                     <span>Read more</span>
                 </a>
