--- a/receps/templates/extensions/recipe_list.html
+++ b/receps/templates/extensions/recipe_list.html
@@ -5,7 +5,7 @@
         
             <!-- IMAGE -->
             <div class="recipe-cover">
-                <img src="{{image}}">
+                <img src="https://via.placeholder.com/1280x720.png/000">
             </div>
             
             <!-- TITLE -->
@@ -17,7 +17,15 @@
             <div class="recipe-author">
                 <span class="author-item">
                     <i class="fas fa-user"></i>
-                    {{recipe.user.username}}
+                    {% if recipe.user is not None%}
+                    
+                      {{recipe.user.username}}
+                      
+                    {% else %}
+                    
+                      Unknow
+                      
+                    {% endif%}
                 </span>
                 
                 <span class="author-item">
@@ -27,7 +35,7 @@
                 
                 <span class="author-item">
                     <i class="fas fa-layer-group"></i>
-                    {{recipe.category}}
+                    {{recipe.category.name}}
                 </span>
             </div>
             
@@ -76,9 +84,9 @@
             </div>
             
             <footer class="recipe-footer">
-                <a class="recipe-read-more button button-dark button-full-width" href="{% url 'receps' %}">
+                <a class="recipe-read-more button button-dark button-full-width" href="{% url 'receps:receps' %}">
                     <i class="fas fa-eye"></i>
-                    <span>Read more</span>
+                    <span>Read more recipes</span>
                 </a>
             </footer>
                             
