Fixed: Fixed the problem with urls, the urls were modified in tests;
Fixed: Removede the duplication from Receps (table:Receps);

Add: Added new tests for templates in Receps: 'tests_receps_templates.py';

Add: Added new tests for templates in Autentication: 'tests_auth_templates.py';

Add: created new extension for pagination from templates in (utils:receps:dir);

Update: Models (Receps:Category) encremented one new column 'icon' for icons font ''awesome'';

Update: Now, in header show to name from category and to icon ''awesome'' font;

--- a/receps/templates/extensions/search_box.html
+++ b/receps/templates/extensions/search_box.html
@@ -1,8 +1,9 @@
 <div class="main-search-container">
 
-  <form action="" class="main-search-form">
-
-    <input type="text" class="search-box">
+  <form method="POST" action="{% url 'receps:search' %}" class="main-search-form">
+    
+    {% csrf_token %}
+    <input type="text" class="search-box" name="search">
   
     <button class="search-button" type="submit">
     
