--- a/receps/templates/pages/receps.html
+++ b/receps/templates/pages/receps.html
@@ -17,4 +17,6 @@
   {% for recipe in Receps %}
     {% include '../extensions/receps_list.html' %}
   {% endfor %}
+  
+  {% include '../extensions/pagination.html' %}
 {% endblock %}
