--- a/receps/templates/extensions/receps_list.html
+++ b/receps/templates/extensions/receps_list.html
@@ -25,7 +25,7 @@
                     {{recipe.date}}
                 </span>
                 
-                <a class="author-item" href="{% url 'receps:category' name=recipe.category.name %}">
+                <a class="author-item" href="{% url 'receps:category' id=recipe.category.id %}">
                     <i class="fas fa-layer-group"></i>
                     {{recipe.category.name}}
                 </a>
