--- a/receps/templates/pages/recipe.html
+++ b/receps/templates/pages/recipe.html
@@ -1,4 +1,4 @@
-{% extends 'extensions/extension.html'%}
+{% extends 'partials/extension.html'%}
 
 {% block 'head'%}
 
@@ -13,11 +13,11 @@
 {% block 'body' %}
 
   <!-- HEADER -->
-  {% include '../extensions/header.html' %}
+  {% include '../partials/header.html' %}
     
   <!-- RECIPE-LIST-ITEM -->  
     
-  {% include '../extensions/recipe_list.html' %}
+  {% include '../partials/recipe_list.html' %}
   
   
 
