--- a/autentication/static/css/style.css
+++ b/autentication/static/css/style.css
@@ -10,24 +10,28 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
-    height: 100vh;
-    background-color: var(--color-gray-2) /* Cor de fundo geral */
+    height: 110vh;
+    background-color: var(--color-gray-1); /* Cor de fundo geral */
 }
 
 .main-form {
-    background-color: var(--color-gray-2);
+
+    display: block;
+    background-color: var(--color-gray-1);
     border-radius: 12px;
-    width: 100%;
+    width: 90%;
     padding: 40px; /* Reduzi o padding para ficar mais equilibrado */
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1); /* Adiciona uma sombra sutil */
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3); /* Adiciona uma sombra sutil */
 }
 
 form {
     text-align: center;
 }
 
+
 h1 {
     color: #333; /* Cor do texto principal */
+    font-family: var(--font-heading);
 }
 
 
@@ -49,7 +53,10 @@ h5{
 }
 
 hr {
-    border: 1px solid #ddd; /* Cor da linha separadora */
+    border: 0.5px solid #ddd; /* Cor da linha separadora */
+    color: #333;
+    height: 1px;
+    background-color: black;
     margin: 20px 0;
 }
 
@@ -57,7 +64,7 @@ a{
 
   font-family: Arial, sans-serif; 
   text-decoration: none;
-  color: #27ae60; 
+  color: var(--color-primary-dark); 
 
 
 }
@@ -80,13 +87,15 @@ input:focus {
 
 #id_email {
     /* Estilo especÃ­fico para o input com ID 'email' */
-    border-color: #27ae60; /* Cor da borda para o input com ID 'email' */
+    border-color: var(--color-primary-dark); /* Cor da borda para o input com ID 'email' */
     font-weight: bold; /* Fonte em negrito para o input com ID 'email' */
 }
 
 button {
-    background-color: #27ae60; /* Nova cor para o botÃ£o, um verde suave */
+
+    background-color: var(--color-primary-dark); /* Nova cor para o botÃ£o, um verde suave */
     color: #fff; /* Cor do texto do botÃ£o */
+    margin-top: 30px;
     padding: 12px;
     border: none;
     border-radius: 8px;
