add: Created new aplication for users create, edit, remove your receps;
update: I update the css styles of author applications;

removed: Removed the directory 'base_templates';

--- a/autentication/templates/pages/validation.html
+++ b/autentication/templates/pages/validation.html
@@ -1,4 +1,4 @@
-{% extends '../partials/extension.html' %}
+{% extends 'extension.html' %}
 
 {% block 'head' %}
 
@@ -43,7 +43,7 @@
         
         <br><br>
         
-        <input type='number' name='token', id='token' placeholder='999-999-999' minlength="8" maxlength="8" required>
+        <input type='number' name='token', id='token' placeholder='999-999-999' minlength=8 maxlength=8 required>
         
         {% if messages %}
         
