--- a/receps/templates/partials/recipe_list.html
+++ b/receps/templates/partials/recipe_list.html
@@ -38,13 +38,7 @@
                     {{recipe.category.name}}
                 </span>
             </div>
-            
-            <div class="recipe-content">
-                                            
-                <p>{{recipe.description}}</p>
-                
-            </div>
-            
+                                    
             <!-- METADATA AND USER INFO -->
             <div class="recipe-meta-container">
                 <!-- TIME OF PREPARATION -->
@@ -81,6 +75,16 @@
                     
                     </div>
                 </div>
+            </div>
+            
+            <div class="recipe-title-container">
+            
+                <h3>
+                  <i class="fas fa-blender"></i> 
+                  Details of recipe
+                </h3>
+                
+                <h5>{{recipe.description}}</h5>
             </div>
             
             <footer class="recipe-footer">
