--- a/autentication/static/css/style.css
+++ b/autentication/static/css/style.css
@@ -69,12 +69,42 @@ a{
 
 }
 
+/* Estilos CSS adicionais */
+.password-content {
+  display: flex;
+  align-items: center;
+}
+
+input[type="password"] {
+  width: calc(100% - 30px);
+  padding-right: 30px;
+}
+
+.password-toggle {
+  position: relative;
+  cursor: pointer;
+  margin-left: -30px;
+  z-index: 1;
+}
+
+.password-toggle::before {
+  content: "";
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 24px;
+  height: 24px;
+  border-radius: 50%;
+  background-color: white;
+}
+
 input {
     width: 100%;
     padding: 10px;
     box-sizing: border-box;
     margin: 10px 0;
-    border: 1px solid #ddd; /* Cor da borda do input padrÃ£o */
+    border: 2px solid #333; /* Cor da borda do input padrÃ£o */
     border-radius: 8px;
     transition: border-color 0.3s ease; /* Adiciona uma transiÃ§Ã£o suave na cor da borda */
 }
