--- a/autentication/templates/pages/login.html
+++ b/autentication/templates/pages/login.html
@@ -1,11 +1,9 @@
-{% extends '../partials/extension.html' %}
+{% extends 'extension.html' %}
 
 {% block 'head' %}
 
   {% load static %}
   
-
-
   <link href="{% static 'css/style.css' %}" rel="stylesheet">
   
   <title>Login</title>
@@ -57,7 +55,12 @@
         
         <h4>password: </h4>
         
-        <input type="password" name="password" id="password" required minlength=8>
+        <div class="password-content">
+          <input type="password" name="password-repeat" id="passwordInput" minlength="8" required>
+          
+          <i class="fas fa-eye password-toggle" onclick="togglePasswordVisibility()"></i>
+          
+        </div>
         
         <hr>
         
@@ -76,4 +79,6 @@
     </div>
   
   </div>
+  
+  <script src="{% static 'js/signup.js' %}"></script>
 {% endblock %}
