--- a/autentication/templates/pages/register.html
+++ b/autentication/templates/pages/register.html
@@ -1,83 +1,42 @@
-{% extends '../partials/extension.html'%}
+{% extends 'extension.html' %}
 
 {% block 'head' %}
-
-
   {% load static %}
-  
-  <title>Sing Up</title>
-
+  <title>Sign Up</title>
   <link href="{% static 'css/style.css' %}" rel="stylesheet">
-  
   <style>
-    
-    {% if messages %}
-    
-      #email{
-      
-        border-color: #e74c3c;
-      
-      }
-                    
-    {% endif%}
-    
-    
+    /* Estilos CSS adicionais */
   </style>
-  
 {% endblock %}
 
 {% block 'body' %}
-
   <div class="main-container">
-  
     <div class="main-form">
-    
       <form method="POST" action="{% url 'auth:register' %}">
-      
-        {%csrf_token%}               
-        
-        <h1> Sing up</h1>        
-                                                   
+        {% csrf_token %}
+        <h1>Sign Up</h1>
         <hr>
-        
-        <h4>email: </h4>
-        
+        <h4>Email:</h4>
         {{ form.email }}
-         
-                       
         {% if messages %}
-        
-          {% for message in messages%}
-          <h5>( ! ) {{ message }}</h5>
-         
+          {% for message in messages %}
+            <h5>( ! ) {{ message }}</h5>
           {% endfor %}
-        
         {% endif %}
-        
-                                     
-        <h4>password: </h4>
-        
-        <input type="password" name="password" id="password" minlength="8" required>
-        
-         
-        <h4>repeat password: </h4>  
-             
-        <input type="password" name="password-repeat" id="password-repeat" required>
-        
-        
-        
-        <a href="{% url 'auth:login' %}">
-        
-          Have an account? Log in 
-          
-        </a>
-                        
-        <button id="button-register"> Cadastrar </button>
-        
+        <h4>Password:</h4>
+        <div class="password-content">
+          <input type="password" name="password" id="passwordInput" minlength="8" required>
+          <i class="fas fa-eye password-toggle" onclick="togglePasswordVisibility()"></i>
+        </div>
+        <h4>Repeat Password:</h4>
+        <div class="password-content">
+          <input type="password" name="password-repeat" id="passwordRepeatInput" minlength="8" required>
+          <i class="fas fa-eye password-repeat-toggle" onclick="togglePasswordRepeatVisibility()"></i>
+        </div>
+        <a href="{% url 'auth:login' %}">Have an account? Log in</a>
+        <button id="button-register">Register</button>
       </form>
-      
     </div>
-    
   </div>
-  
+  <script src="{% static 'js/signup.js' %}"></script>
 {% endblock %}
