--- a/autentication/templates/partials/extension.html
+++ b/autentication/templates/partials/extension.html
@@ -26,7 +26,7 @@
     
     <style>
     
-      {% include 'extensions/root.html' %}
+      {% include 'partials/root.html' %}
       
     </style>
     
