update: Refactored code for integration of view class bases (django);
add: Created news bases class: 'RecepsListView', 'AuthorsCreate', 'AuthView';

add: Created news tests for Authors;

--- a/receps/templates/partials/header_category.html
+++ b/receps/templates/partials/header_category.html
@@ -8,7 +8,7 @@
         <i class="{{icon}}"></i>
         
                         
-        <span class="main-logo-text">{{name_of_category}}</span>
+        <span class="main-logo-text">{{category_name}}</span>
                                            
       </h1>
       
