--- a/receps/templates/pages/category.html
+++ b/receps/templates/pages/category.html
@@ -14,8 +14,8 @@
   {% include '../partials/search_box.html' %}
   
   <!-- RECIPE-LIST-ITEM -->  
-  {% for recipe in Receps %}
-    {% include '../partials/receps_list.html' %}
+  {% for recipe in recipes %}
+    {% include '../partials/recipes.html' %}
   {% endfor %}
   
   {% include '../partials/pagination.html' %}
