--- a/receps/templates/pages/recipe.html
+++ b/receps/templates/pages/recipe.html
@@ -17,7 +17,7 @@
     
   <!-- RECIPE-LIST-ITEM -->  
     
-  {% include '../partials/recipe_list.html' %}
+  {% include '../partials/recipe.html' %}
   
   
 
