--- a/receps/templates/partials/header_category.html
+++ b/receps/templates/partials/header_category.html
@@ -2,7 +2,7 @@
 
   <header class="main-header">
 
-    <a class="main-logo" href="{% url 'receps:receps' %}">
+    <a class="main-logo" href="{% url 'recipes:recipes' %}">
       <h1>
                    
         <i class="{{icon}}"></i>
