--- a/authors/templates/partials/header_min.html
+++ b/authors/templates/partials/header_min.html
@@ -1,10 +1,10 @@
 <div class="main-header-profile">      
-  <a href="{% url 'receps:receps' %}" class="header-profile-title">  Receps</a>
+  <a href="{% url 'recipes:recipes' %}" class="header-profile-title">  Receps</a>
           
   {% if not user.is_authenticated %}
         
-  <a href="{% url 'receps:receps' %}" class="header-profile-enter"> Enter</a>
-  <a href="{% url 'receps:receps' %}" class="header-profile-register"> Sing Up </a>
+  <a href="{% url 'recipes:recipes' %}" class="header-profile-enter"> Enter</a>
+  <a href="{% url 'recipes:recipes' %}" class="header-profile-register"> Sing Up </a>
         
   {% endif %}
         
