--- a/authors/templates/partials/recipe_edit.html
+++ b/authors/templates/partials/recipe_edit.html
@@ -1,8 +1,9 @@
 <div class="main-container">
     <div class="main-content main-content-list container">
   
-        <div class="recipe recipe-list-item">
+        <form class="recipe recipe-list-item" method="POST" action="{% url 'authors:edit' id=recipe.id %}">
         
+            {% csrf_token %}        
             <!-- IMAGE -->
             <div class="recipe-cover">
                 <img src="https://via.placeholder.com/1280x720.png/000">
@@ -10,7 +11,7 @@
             
             <!-- TITLE -->
             <div class="recipe-title-container">
-                <h2>{{recipe.title}}</h2>
+                <h2>{{form.title}}</h2>
             </div>
             
             <!-- AUTHOR -->
@@ -35,7 +36,7 @@
                 
                 <span class="author-item">
                     <i class="fas fa-layer-group"></i>
-                    {{recipe.category.name}}
+                    {{form.category}}
                 </span>
             </div>
                                     
@@ -46,7 +47,7 @@
                     <h3 class="recipe-meta-title"><i class="fas fa-stopwatch"></i>Preparo</h3>
                     
                     <div class="recipe-meta-text">
-                        {{recipe.time}}
+                        {{form.time}}
                     </div>
                 </div>
                 
@@ -62,13 +63,13 @@
                     
                     {% if recipe.portions < 2%}
                     
-                    {{recipe.portions}} Portion
+                    {{form.portions}}
                     
                     {% endif %}
                     
                     {% if recipe.portions > 2%}
                     
-                    {{recipe.portions}} Portions
+                    {{form.portions}}
                     
                     {% endif %}
                     
@@ -84,17 +85,18 @@
                   Details of recipe
                 </h3>
                 
-                <h5>{{recipe.description}}</h5>
+                <h5>{{form.description}}</h5>
             </div>
             
-            <footer class="recipe-footer">
-                <a class="recipe-read-more button button-dark button-full-width" href="{% url 'receps:receps' %}">
-                    <i class="fas fa-eye"></i>
-                    <span>Read more recipes</span>
-                </a>
-            </footer>
+            <div class="recipe-footer">
+            
+                <button class="recipe-read-more button button-dark button-full-width" href="{% url 'recipes:recipes' %}">
+                    <i class="fas fa-edit"></i>
+                    <span>Edit</span>
+                </button>
+            </div>
                             
-        </div>
+        </form>
       
     </div>
 </div>
