--- a/receps/templates/partials/search_box.html
+++ b/receps/templates/partials/search_box.html
@@ -1,6 +1,6 @@
 <div class="main-search-container">
 
-  <form method="POST" action="{% url 'receps:search' %}" class="main-search-form">
+  <form method="POST" action="{% url 'recipes:search' %}" class="main-search-form">
     
     {% csrf_token %}
     <input type="text" class="search-box" name="search">
